# swift-rust-test

./: .gitignore  README.md
backend/: Cargo.toml  Makefile  build.sh
backend/src/: lib.rs
swift-rust-test/: ContentView.swift  swift_rust_testApp.swift
swift-rust-test.xcodeproj/: project.pbxproj
swift-rust-test.xcodeproj/xcuserdata/mstenber.xcuserdatad/xcschemes/: xcschememanagement.plist
swift-rust-testTests/: swift_rust_testTests.swift
swift-rust-testUITests/: swift_rust_testUITests.swift  swift_rust_testUITestsLaunchTests.swift
